--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEST VUE</title>
-    <script src="https://unpkg.com/vue@3"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -14,7 +14,8 @@
 
     <div id="app">
         <div id="container" v-bind:class="coloreSfondo">
-            <h1 v-bind:class="coloreTesto">Test VueJs di {{nome}} {{cognome}}</h1>
+            <h1 v-bind:class="coloreTesto">Test VueJs di {{nome.toLocaleUpperCase()}} {{cognome.toLocaleUpperCase()}}
+            </h1>
             <div class="box">
                 <input v-model="coloreSfondo" placeholder="Scegli se rosa giallo o blu">
                 <button @click="btn">Torna allo sfondo bianco</button>
